<resources>
    <string name="app_name">Time Sheet</string>
    <string name="time_sheet">@string/app_name</string>

    <!--Admin-->
    <string-array name="slider_list_items">
        <item>Employee Master</item>
        <item>Project Master</item>
        <item>Employee Project</item>
        <item>Summary Details</item>
        <item>Leave</item>
        <item>Holiday Calender</item>
    </string-array>

    <integer-array name="slider_list_images">
        <item>@drawable/menu_user</item>
        <item>@drawable/menu_help</item>
        <item>@drawable/menu_shoppilist</item>
        <item>@drawable/menu_orders</item>
        <item>@drawable/menu_settings</item>
        <item>@drawable/ic_calender_view</item>
        <!--<item>@drawable/menu_faq</item>-->
        <!--<item>@drawable/menu_share</item>-->
        <!--<item>@drawable/menu_address</item>-->
        <!--<item>@drawable/menu_cart</item>-->
        <!--<item>@drawable/menu_rateus</item>-->
    </integer-array>
    <!--End of admin-->

    <!--Hint-->
    <string name="hint_em_code">Employee Code</string>
    <string name="hint_password">Password</string>
    <string name="hint_remarks">Enter you remarks here…</string>
    <string name="hint_reason">Enter you reason here…</string>

    <!--Authentication Validation errors-->
    <string name="emp_code_required">"Employee code is required"</string>
    <string name="error_required_password">Password is required</string>
    <string name="error_required_cpassword">Confirm Password is required</string>
    <string name="error_no_current_password">Current password cannot be blank</string>
    <string name="error_password_do_not_match">Passwords do not match</string>
    <string name="error_password_minimum_character">Minimum 6 characters</string>
    <string name="error_password_not_match">New password do not match</string>

    <!--Fonts-->
    <string name="font_lero">FONTLERO</string>
    <string name="roboto_light">RobotoLight</string>
    <string name="roboto_light_italic">RobotoLightItalic</string>
    <string name="roboto_thin">RobotoThin</string>
    <string name="roboto_thin_italic">RobotoThinItalic</string>
    <string name="roboto_regular">RobotoRegular</string>
    <string name="roboto_regular_italic">RobotoRegularItalic</string>
    <string name="aleo_regular">AleoRegular</string>
    <string name="lb_login">Login</string>
    <string name="app_sub_heading">Time entires</string>

    <!--Common-->
    <string name="no_internet_connection">No Internet connection! Check your settings.</string>
    <string name="tab_home">Time Sheet</string>
    <string name="reports">Weekly Report</string>
    <string name="user_profile">User Profile</string>

    <string name="tab_week">Weekly Report</string>
    <string name="tab_month">Monthly Report</string>
    <string name="tab_year">Yearly Report</string>

    <string name="prompt_progress_title">Please Wait…</string>
    <string name="error_no_network">Network disconnected</string>

    <!--TimeSheet entry Validation errors-->
    <string name="error_project_required">Project name required</string>
    <string name="error_date_required">Date required</string>
    <string name="error_start_required">Start time required</string>
    <string name="error_end_required">End time required</string>
    <string name="error_invalid_time_2">Start time should be less then end time</string>
    <string name="error_invalid_time_1">Start and End times should be different</string>
    <string name="error_desc_required">Description required</string>
    <string name="enter_you_description_here">Enter you description here…</string>
    <string name="description">Description</string>
    <string name="project_name">Project Name</string>
    <string name="date">Date</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="modify">Modify</string>
    <string name="save">Save</string>
    <string name="total_hours">%s hours spent on %s</string>


    <!--Leave Entry Validation errors-->
    <string name="error_leave_type">Leave type required</string>
    <string name="error_from_date">From date required</string>
    <string name="error_to_date">To date required</string>
    <string name="error_remarks">Remarks required</string>
    <string name="error_reasons">Reasons required</string>
    <string name="error_invalid_date_2">From date should be less then To date</string>
    <string name="error_invalid_date_1">From and To dates should be different</string>


    <!--Labels-->
    <string name="lb_leave_type">Leave Type</string>
    <string name="lb_duty_type">On Duty Type</string>
    <string name="lb_from_date">From Date</string>
    <string name="lb_to_date">To Date</string>
    <string name="lb_remarks">Remarks</string>
    <string name="lb_submit">Submit</string>
    <string name="lb_unapproved_leave">Unapproved Leave</string>
    <string name="lb_leave_taken">Leave Taken</string>
    <string name="lb_edit">Edit</string>
    <string name="lb_ts_entry">Time Sheet Entry</string>
    <string name="lb_password">Password</string>
    <string name="lb_employee_name">Employee Name</string>
    <string name="lb_employee_code">Employee Code</string>
    <string name="lb_email_address">Email Address</string>
    <string name="lb_admin_access">Admin Access</string>
    <string name="lb_off">Off</string>
    <string name="lb_on">On</string>
    <string name="lb_description">Description</string>
    <string name="lb_project_name">Project Name</string>
    <string name="lb_task_description">Task description</string>
    <string name="lb_total_hours">Total hours</string>
    <string name="lb_project_code">Project Code</string>
    <string name="ln_common_flag">Common Project</string>
    <string name="lb_yes">Yes</string>
    <string name="lb_no">No</string>
    <string name="lb_is_common_project">Is Common Project</string>
    <string name="lb_select_year">Select Year</string>
    <string name="lb_done">Done</string>
    <string name="lb_employee_names">Employee Name</string>
    <string name="lb_ts_modify">Time Sheet Modify</string>

    <!--Tooltips-->
    <string name="tt_apply_leave">Apply Leave</string>
    <string name="lb_leave">Leave</string>
    <string name="lb_leave_requests">Leave Requests</string>
    <string name="lb_leave_overview">Leave Overview</string>
    <string name="lb_requested">Requested</string>
    <string name="lb_rejected">Rejected</string>
    <string name="lb_approved">Approved</string>
    <string name="lb_request_leave">Request Leave</string>
    <string name="lb_request_on_duty">Request On Duty</string>
    <string name="lb_entitlement">Entitlement</string>
    <string name="lb_sick">Sick</string>
    <string name="lb_sick_leave">Sick Leave</string>
    <string name="lb_casual">Casual</string>
    <string name="lb_casual_leave">Casual Leave</string>
    <string name="lb_earned">Earned</string>
    <string name="lb_earned_leave">Earned Leave</string>
    <string name="lb_leave_calender_view">Leave Calender View</string>
    <string name="lb_holiday_calender">Holiday Calender</string>
    <string name="lb_search_hint">Search by Project Name</string>
    <string name="lb_search_hint_on_duty">Search by On Duty</string>
    <string name="lb_used_leaves">Used Leaves</string>
    <string name="lb_used_duties">Used Duties</string>
    <string name="lb_available_leaves">Available Leaves</string>
    <string name="lb_available_duties">Available Duties</string>
    <string name="lb_approve_leave">Approve Leave</string>
    <string name="lb_requests">Requests</string>
    <string name="lb_applied_on">Applied On</string>
    <string name="lb_approve">Approve</string>
    <string name="lb_reject">Reject</string>
    <string name="lb_space5" />
    <string name="lb_my_on_duty">My On Duty</string>
    <string name="lb_reason">Reason</string>

</resources>
