<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.android.timesheet.admin_operations.project_master.add_project.AddProject">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/margin_30"
                    android:layout_marginStart="@dimen/margin_30">

                    <com.android.timesheet.shared.widget.CustomFontTextView
                        android:id="@+id/toolbarTitleTv"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="@dimen/margin_20"
                        android:layout_marginRight="@dimen/margin_20"
                        android:gravity="center"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="@dimen/tv_font_size_22"
                        android:visibility="visible"
                        app:font="@string/aleo_regular" />

                </RelativeLayout>

            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/margin_10"
        android:layout_marginRight="@dimen/margin_10"
        android:layout_marginTop="?attr/actionBarSize">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/projectNameTIL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0sp"
                android:hint="@string/lb_project_name"
                android:textColor="#939393"
                android:textSize="@dimen/tv_font_size_18">

                <EditText
                    android:id="@+id/projectNameET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="100"
                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890.#-_+$@* "
                    android:textColor="#060404" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5sp"
                    android:layout_weight="1"
                    android:gravity="center|start"
                    android:text="@string/lb_is_common_project"
                    android:textSize="@dimen/tv_font_size_18" />

                <ToggleButton
                    android:id="@+id/projectTBtn"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textOff="@string/lb_no"
                    android:textOn="@string/lb_yes" />

            </LinearLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:gravity="bottom"
            android:orientation="horizontal">

            <com.android.timesheet.shared.widget.CustomFontTextView
                android:id="@+id/submitBtn"
                style="@style/AppTheme.Action.TextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin_1"
                android:background="@drawable/bg_blue_border_black"
                android:gravity="center"
                android:text="@string/lb_submit"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Widget.Button.Inverse"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:visibility="gone"
                app:fonts="@string/roboto_regular" />

        </RelativeLayout>

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
