<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_employee_serialization"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".admin_operations.employee_master.edit_employee.EditEmployee">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/toolbar_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:contentScrim="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:toolbarId="@+id/toolbar">

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?android:attr/actionBarSize"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="@dimen/margin_30"
                        android:layout_marginStart="@dimen/margin_30">

                        <com.android.timesheet.shared.widget.CustomFontTextView
                            android:id="@+id/toolbarTitleTv"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="@dimen/margin_0"
                            android:layout_marginRight="@dimen/margin_20"
                            android:clickable="true"
                            android:gravity="center"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="@dimen/tv_font_size_20"
                            android:visibility="visible"
                            app:font="@string/roboto_thin" />

                    </RelativeLayout>

                </android.support.v7.widget.Toolbar>

            </android.support.design.widget.CollapsingToolbarLayout>

        </android.support.design.widget.AppBarLayout>

        <ScrollView
            android:id="@+id/sv_activity_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="?attr/actionBarSize"
            android:fillViewport="true"
            android:scrollbars="none">

            <LinearLayout
                android:id="@+id/linear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="100dp"
                android:layout_marginLeft="@dimen/margin_10"
                android:layout_marginRight="@dimen/margin_10"
                android:layout_marginTop="@dimen/margin_10"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/employee_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="0dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="@dimen/margin_10"
                    android:hint="@string/lb_employee_name"
                    android:textColor="#939393"
                    android:textSize="@dimen/tv_font_size_18">

                    <EditText
                        android:id="@+id/empNameEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:textColor="#060404" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="0sp"
                    android:layout_marginTop="5sp"
                    android:hint="@string/lb_employee_code"
                    android:textColor="#939393"
                    android:textSize="@dimen/tv_font_size_18">

                    <EditText
                        android:id="@+id/empCodeEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textShortMessage"
                        android:textColor="#060404" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="0sp"
                    android:hint="@string/lb_email_address"
                    android:textColor="#939393"
                    android:textSize="@dimen/tv_font_size_18">

                    <EditText
                        android:id="@+id/eMailEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:textColor="#060404" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/passwordTIL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="0sp"
                    android:hint="@string/lb_password"
                    android:textColor="#939393"
                    android:textSize="@dimen/tv_font_size_18">

                    <EditText
                        android:id="@+id/passwordEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:maxLength="30"
                        android:minLines="6"
                        android:textColor="#060404" />
                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:id="@+id/linearAdmin"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_marginLeft="@dimen/margin_0"
                    android:layout_marginRight="@dimen/margin_0"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/left_text"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="5sp"
                        android:layout_weight="1"
                        android:gravity="center|start"
                        android:text="@string/lb_admin_access"
                        android:textSize="@dimen/tv_font_size_18" />

                    <ToggleButton
                        android:id="@+id/adminAccessTBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:textOff="@string/lb_off"
                        android:textOn="@string/lb_on" />

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

        <RelativeLayout
            android:id="@+id/mLlayoutBottomButtons"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom"
            android:layout_margin="10dp"
            android:background="@drawable/bg_border"
            android:gravity="bottom"
            android:orientation="horizontal">

            <com.android.timesheet.shared.widget.CustomFontTextView
                android:id="@+id/editBtn"
                style="@style/AppTheme.Action.TextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin_1"
                android:background="@color/colorGray"
                android:gravity="center"
                android:text="@string/lb_edit"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Widget.Button.Inverse"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:fonts="@string/roboto_regular" />

            <com.android.timesheet.shared.widget.CustomFontTextView
                android:id="@+id/submitBtn"
                style="@style/AppTheme.Action.TextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin_1"
                android:background="@color/colorAccent"
                android:gravity="center"
                android:text="@string/lb_submit"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Widget.Button.Inverse"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:visibility="gone"
                app:fonts="@string/roboto_regular" />

        </RelativeLayout>

    </RelativeLayout>


</android.support.design.widget.CoordinatorLayout>

