<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:fillViewport="true"
    tools:context="com.android.timesheet.auth.LoginActivity">

    <RelativeLayout
        android:id="@+id/rlActivity_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="ScrollViewSize">

        <ScrollView
            android:id="@+id/sv_activity_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            android:scrollbars="none"
            tools:context=".auth.LoginActivity">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true">

                <ImageView
                    android:id="@+id/imageViewLogo"
                    android:layout_width="@dimen/logo_height"
                    android:layout_height="@dimen/logo_height"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/margin_30"
                    android:selectAllOnFocus="true"
                    android:src="@drawable/logo"
                    tools:ignore="ContentDescription" />

                <LinearLayout
                    android:id="@+id/linearLayoutDc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/imageViewLogo"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <com.android.timesheet.shared.widget.CustomFontTextView
                        android:id="@+id/textViewAppName"
                        style="@style/AppTheme.Text.TextView.Header"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/app_name"
                        android:textColor="@color/black"
                        android:visibility="visible"
                        app:fonts="@string/aleo_regular" />

                    <com.android.timesheet.shared.widget.CustomFontTextView
                        android:id="@+id/textViewSubTitle"
                        style="@style/AppTheme.AppSubName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/image_view_margin_20"
                        android:text="@string/app_sub_heading"
                        android:textSize="@dimen/tv_font_size_16"
                        android:visibility="invisible"
                        app:fonts="@string/aleo_regular" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llLoginCredentials"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/linearLayoutDc"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/layout_action_padding_5"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/layout_action_padding_5">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/textInputLayoutECode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/activity_vertical_margin"
                        android:layout_marginLeft="@dimen/activity_vertical_margin"
                        android:layout_marginRight="@dimen/activity_vertical_margin"
                        android:hint="@string/hint_em_code"
                        android:textColorHint="@color/black"
                        app:errorTextAppearance="@style/AppTheme.TextInputLayout.ErrorAppearance">

                        <EditText
                            android:id="@+id/editTextECode"
                            style="@style/AppTheme.Input.EditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:maxLines="1"
                            android:nextFocusDown="@+id/editTextPassword"
                            android:paddingTop="@dimen/layout_action_padding_5"
                            android:text="e010"
                            android:textColor="@color/colorAccent" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/textInputLayoutPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_5"
                        android:layout_marginLeft="@dimen/activity_vertical_margin"
                        android:layout_marginRight="@dimen/activity_vertical_margin"
                        android:hint="@string/hint_password"
                        android:textColorHint="@color/black"
                        app:errorTextAppearance="@style/AppTheme.TextInputLayout.ErrorAppearance">

                        <EditText
                            android:id="@+id/editTextPassword"
                            style="@style/AppTheme.Input.EditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:nextFocusDown="@+id/textViewLogin"
                            android:paddingTop="@dimen/layout_action_padding_5"
                            android:text="prisam@1"
                            android:textColor="@color/colorAccent" />
                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

            </RelativeLayout>

        </ScrollView>

        <RelativeLayout
            android:id="@+id/llLoginAction"
            android:layout_width="match_parent"
            android:layout_height="@dimen/thumb_h"
            android:layout_alignParentBottom="true"
            android:background="@color/colorWhite">

            <com.android.timesheet.shared.widget.CustomFontTextView
                android:id="@+id/textViewLogin"
                style="@style/AppTheme.Action.TextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/lb_login"
                app:fonts="@string/roboto_regular" />

        </RelativeLayout>

    </RelativeLayout>


</android.support.design.widget.CoordinatorLayout>